--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JSX Launchpad</title>
+    <style>
+        .red {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 <script type="module" src="/src/main.ts"></script>
